--- a/test/README
+++ b/test/README
@@ -1,11 +1,18 @@
+#include <Arduino.h>
+#include <WiFi.h>
 
-This directory is intended for PlatformIO Test Runner and project tests.
+void setup() {
+  Serial.begin(115200);
+  
+  // Phải bật chế độ Station thì mới đọc đúng MAC dùng cho ESP-NOW
+  WiFi.mode(WIFI_STA);
+  
+  Serial.println("\n\n-----------------------------");
+  Serial.print("DIA CHI MAC CUA CON CHIP NAY LA: ");
+  Serial.println(WiFi.macAddress());
+  Serial.println("-----------------------------\n");
+}
 
-Unit Testing is a software testing method by which individual units of
-source code, sets of one or more MCU program modules together with associated
-control data, usage procedures, and operating procedures, are tested to
-determine whether they are fit for use. Unit testing finds problems early
-in the development cycle.
-
-More information about PlatformIO Unit Testing:
-- https://docs.platformio.org/en/latest/advanced/unit-testing/index.html
+void loop() {
+  // Không làm gì cả
+}
